# socket_programming_rust

./: .gitignore  Cargo.toml  README.md  test.html
.trunk/: logs  notifications  out  tools
.trunk/actions/trunk-upgrade-available/: 2024-01-29-13-54-35.977.yaml  2024-01-29-14-54-36.759.yaml  2024-01-29-15-54-36.816.yaml  2024-01-29-16-54-35.348.yaml  2024-01-29-17-54-35.793.yaml  2024-01-29-18-54-35.637.yaml
src/client/: main.rs
src/server/: main.rs
